Added correct homepage for github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "memory_card",
+  "homepage": "https://colland.github.io/memory_card/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
